SONAR-17815 Adapt isCaycCompliant computation to its new definition